# project-flip-disc

./: CMakeLists.txt  README.md  cert.pem  https_server  server.cpp
arduino/: flipdisc-test.ino
arduino/esp32/: esp32.ino
backend/: CMakeLists.txt  cert.csr  client_handler.hpp  key.pem  main.cpp  openssl.cnf  server.cpp  server.hpp  video_stream.hpp
backend/python/: camtest.py  foropencv.py  remb.py  requirements.txt  server-socket.py  test.py  u2net.py
flip-disc_frontend/: index.html  package-lock.json  package.json  tailwind.config.js
flip-disc_frontend/src/: App.jsx  index.css  main.jsx  style.css
flip-disc_frontend/src/components/: Fadein.jsx  Flipdot.css  Flipdot.jsx  Mainbox.jsx  Nav.jsx  navstyle.css
flip-disc_frontend/src/pages/: about.jsx  contact.jsx  home.jsx  test.jsx
static/: tailwind.config.js
